# playlist_player

./: .gitignore  README.md  cz.toml  pyproject.toml  start_server.sh
.githooks/: prepare-commit-msg
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
cz_podcast/: README.md  cz_podcast.py  setup.py
playlist_generator/: generate_security_now_podcast.py
scripts/: create_website_friendly_icons.sh
server/: audio_player.py  main.py  podcast_player.py  pyproject.toml  start.sh
